# conv2d_data

original_data/resnet18_conv1/: compare_chess_reports.tcl  config.yaml  dramsim_estimation.py  run_benchmark.sh  run_iss.tcl  run_rtl.tcl
original_data/resnet18_conv1/clion/: CMakeLists.txt
original_data/resnet18_conv1/data/: conv2d.eDMv_Glob  conv2d_config.h  conv2d_iss_init.tcl  conv2d_verify_init.tcl
original_data/resnet18_l1_b0_conv1/: benchmark_conv2d.c  benchmark_conv2d.prx  config.yaml  fsdb_extract_opcodes.tcl  linker_file.bcf  run_benchmark.sh  run_iss.tcl  run_rtl.tcl  verify_gate.tcl
original_data/resnet18_l1_b0_conv1/data/: conv2d.eDMv_Glob  conv2d_config.h  conv2d_iss_init.tcl  conv2d_verify_init.tcl
